# hwanNote

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  ubuntu-verify.yml
docs/: windows-dev-setup.md
docs/superpowers/plans/: 2026-04-15-calendar-day-double-click-navigation.md  2026-04-15-calendar-view-modes.md  2026-04-17-calendar-grid-always-sunday.md  2026-04-17-calendar-weekend-highlighting.md  2026-04-17-undated-todos.md  2026-04-19-task-event-deadline-kinds.md  (+3 more)
electron/: configManager.ts  fileManager.ts  main.ts  preload.ts  updater.ts
scripts/: setup-linux-dev.sh  setup-windows-dev.ps1
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config_manager.rs  file_manager.rs  lib.rs  main.rs
src/components/: ContextMenu.tsx  Editor.tsx  FolderTree.tsx  LinkBubble.tsx  LinkPopup.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TableSizePopup.tsx  TitleBar.tsx  Toolbar.tsx  UpdateToast.tsx
src/extensions/: tabIndent.ts  taskItemExtended.ts  toggleBlock.ts
src/hooks/: useAutoSave.ts
src/i18n/: context.tsx  messages.ts
src/lib/: calendarData.ts  calendarRange.ts  calendarSpans.ts  folderPaths.ts  shortcuts.ts  tauriApi.ts
src/stores/: calendarStore.ts  noteStore.ts
src/styles/: calendar.css  global.css  themes.ts
(+13 files in other folders)
