[package]
name = "hwan-note"
version = "0.2.4"
edition = "2021"
description = "Windows 11 Notepad-style desktop markdown note app"

[lib]
name = "hwan_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
trash = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
regex = "1"
dirs = "5"
